syntax = "proto3";

package service2;

service Users {
  rpc GetUser (UserGetRequest) returns (UserGetReply);
}
message UserGetRequest {
  string email = 1;
  string id    = 2;
}

message User {
  string id         = 1;
  string first_name = 2;
  string lastt_name = 3;
  int32  age        = 4;
}

message UserGetReply {
  User   user     = 1;
  string location = 2;
}

